--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!t]
 \fontsize{6.8pt}{8.1pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lllrlrrrl}
 \toprule
@@ -29,7 +29,7 @@ Total & Sample 15 &  & 32214 &  & 48.6 ± 13.1 & 17-93 & 71.6\% &  \\
 \bottomrule
 \end{tabular*}
 \begin{minipage}{\linewidth}
-* Information taken from the sample description of relevant paper rather than recomputed.\\
+Note.*Information taken from the sample description of relevant paper rather than recomputed. Sample 10 does not include IAS items about temperature, blood sugar and cough.\\
 \end{minipage}
 \end{table}
 
